--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "moment": "^2.30.1",
     "mongoose": "^8.4.3",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pdfkit": "^0.15.0"
   }
 }
