--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
     "express": "^4.19.2",
 
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
 
     "jsonwebtoken": "^9.0.2",
 
