--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
-    "chart.js": "^4.4.3",
+    "chart.js": "^3.9.1",
+    "chartjs-node-canvas": "^4.1.6",
     "flag-icon-css": "^4.1.7",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
