--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://cesarbenitez46:TCrQcrilc8jrnDWv@cluster0.5lbethn.mongodb.net/
+MONGODB_URI=mongodb+srv://cesarbenitez46:W0PqiZEELNzGWg6o@cluster0.eluroux.mongodb.net/
 PORT=8000
